@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.4.18"
+#define KPPPVERSION "1.4.19"
 #endif
